gcc/testsuite/g++.dg/other/pr33558.C
/* { dg-do compile } */

class X {
  mutable int &q; /* { dg-error "3:reference .q. cannot be declared .mutable." } */
};
